[project]
name = "myStandard_Library"
version = "0.0.4"
description = "Standard library to be used in multiple projects."
requires-python = ">=3.10"
authors = [{name="HS Wee"}]
dependencies = ["pandas"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Changelog = "https://github.com/hswee92/myStandard-Library/blob/main/Changelog.md"



